test/functions/bradc/varFns/retLitFromVarFn.good
retLitFromVarFn.chpl:4: In function 'this':
retLitFromVarFn.chpl:6: error: function cannot return constant by ref
